tests/invalid/Template_Invalid_22.whiley
function f<T>(&T:int ptr, T value) -> (bool x):
    return false